tree-sitter-terlan/grammar.js
    source_file: ($) => repeat($._top_level_item),

    _top_level_item: ($) =>
      choice(
        $.module_declaration,
        $.import_declaration,
        $.annotation,
        $.constant_declaration,
        $.const_function_declaration,
        $.type_declaration,
        $.shape_declaration,
        $.struct_declaration,
        $.trait_declaration,
        $.impl_declaration,
        $.template_declaration,
        $.template_element,
        $.interpolation,
        $.function_declaration,
        $.constructor_declaration,
        $.config_declaration
      ),

    module_declaration: ($) =>
      seq("module", field("name", $.qualified_identifier), "."),

    shape_declaration: ($) =>
      prec(
        2,
        seq(
          optional($.pub_keyword),
          "shape",
          field("name", $.type_identifier),
          optional($.shape_parameters),
          "=",
          field("body", $.shape_pattern),
          optional($.shape_guard_clause),
          "."
        )
      ),

    shape_parameters: ($) => seq("(", optional(commaSep1($.identifier)), ")"),

    shape_guard_clause: ($) => seq("where", $.shape_guard_expression),

    shape_guard_expression: ($) =>
      choice(
        $.shape_guard_binary_expression,
        $.identifier,
        $.type_identifier,
        $.number,
        $.string,
        seq("(", $.shape_guard_expression, ")")
      ),

    shape_guard_binary_expression: ($) =>
      prec.left(
        1,
        seq(
          $.shape_guard_expression,
          choice(
            "+",
            "-",
            "*",
            "/",
            "==",
            "!=",
            ">=",
            "<=",
            ">",
            "<",
            "in",
            "..",
            "and",
            "or",
            "|>"
          ),
          $.shape_guard_expression
        )
      ),

    shape_pattern: ($) =>
      choice(
        $.shape_tuple_pattern,
        $.shape_list_pattern,
        $.shape_constructor_pattern,
        $.pattern
      ),

    trait_declaration: ($) =>
      seq(
        optional($.pub_keyword),
        "trait",
        field("name", $.type_identifier),
        optional($.type_parameters),
        "{",
        repeat(choice($.associated_constant_declaration, $.function_signature, $.function_declaration)),
        "}",
        "."
      ),

    impl_declaration: ($) =>
      choice(
        seq(
          optional($.pub_keyword),
          "impl",
          "not",
          field("trait", $._name_ref),
          "[",
          field("target", $.type_expression),
          "]",
          "."
        ),
        seq(
          optional($.pub_keyword),
          "impl",
          field("trait", $.impl_trait_ref),
          "for",
          field("target", $.type_expression),
          "{",
          repeat(choice($.impl_constant_declaration, $.function_declaration)),
          "}",
          "."
        )
      ),

    impl_trait_ref: ($) =>
      seq(
        $._type_name_ref,
        optional(
          seq(
            "[",
            commaSep1(choice($.type_expression, $.implication_type_parameter)),
            "]"
          )
        )
      ),

    function_declaration: ($) =>
      prec.right(
        1,
        seq(
          repeat($.annotation),
          optional($.pub_keyword),
          optional($.receiver),
        field("name", $.identifier),
        optional($.type_parameters),
        $.parameters,
        optional(seq(":", $.type_expression)),
        optional($.guard_clause),
        "->",
        $.expression,
        "."
      )
      ),

    function_signature: ($) =>
      seq(
        field("name", $.identifier),
        optional($.type_parameters),
        $.parameters,
        optional(seq(":", $.type_expression)),
        "."
      ),

    parameters: ($) => seq("(", optional(commaSep1($.parameter)), ")"),

    parameter: ($) =>
      choice(
        seq(field("name", $.identifier), ":", $.type_expression, optional(seq("=", $.expression))),
        seq(field("pattern", $.parameter_pattern), ":", $.type_expression),
        $.pattern
      ),

    type_parameters: ($) => seq("[", commaSep1($._type_parameter), "]"),

    _type_parameter: ($) =>
      choice($.type_identifier, $.const_type_parameter, $.implication_type_parameter),

    implication_type_parameter: ($) =>
      seq($.type_identifier, "=>", $.structural_evidence_shape),

    structural_evidence_shape: ($) =>
      seq("{", commaSep1($.implication_field), "}"),

    implication_field: ($) =>
      seq(field("name", $.identifier), ":", field("type", $._implication_type)),

    _implication_type: ($) =>
      choice($.structural_evidence_shape, $.type_expression),

    type_expression: ($) =>
      choice(
        $.type_identifier,
        $.qualified_identifier,
        $.generic_type,
        $.tuple_type,
        $.function_type,
        $.atom_type
      ),

    generic_type: ($) => seq($._type_name_ref, "[", commaSep1($.type_expression), "]"),

    expression: ($) =>
      choice(
        $.let_expression,
        $.case_expression,
        $.if_expression,
        $.lambda_expression,
        $.binary_layout_expression,
        $.list_expression,
        $.remote_call_expression,
        $.method_call_expression,
        $.call_expression,
        $.field_expression,
        $.cast_expression,
        $.unary_expression,
        $.binary_expression,
        $.raw_macro_expression,
        $.interpolation,
        $.identifier,
        $.type_identifier,
        $.number,
        $.string,
        $.atom_literal,
        seq("(", $.expression, ")")
      ),

    let_expression: ($) =>
      choice(
        prec.dynamic(2, $.refutable_let_expression),
        prec.dynamic(
          1,
          prec.right(3, seq(repeat1(seq("let", $.let_binding)), $.expression))
        )
      ),

    let_binding: ($) => seq(field("pattern", $.pattern), "=", $.expression, ";"),

    refutable_let_expression: ($) =>
      prec.right(
        4,
        seq(
          "let",
          choice(
            field("binding", $.refutable_let_binding),
            seq(
              "{",
              field("binding", $.refutable_let_binding),
              repeat(seq(";", field("binding", $.refutable_let_binding))),
              optional(";"),
              "}"
            )
          ),
          "else",
          "{",
          repeat1($.case_arm),
          "}",
          ";",
          field("body", $.expression)
        )
      ),

    refutable_let_binding: ($) =>
      seq(field("pattern", $.pattern), "<-", field("value", $.expression)),

    case_expression: ($) =>
      seq("case", $.expression, "{", repeat1($.case_arm), "}"),

    case_arm: ($) => seq($.pattern, optional($.guard_clause), "->", $.expression, optional(";")),

    lambda_expression: ($) => seq($.parameters, "->", $.expression),

    binary_layout_expression: ($) =>
      seq(
        "Binary",
        "[",
        field("endian", $.binary_layout_endian),
        "]",
        "{",
        commaSep1($.binary_layout_field),
        "}"
      ),

    binary_layout_field: ($) =>
      seq(
        field("name", $.identifier),
        ":",
        field("descriptor", $.binary_layout_descriptor)
      ),

    list_expression: ($) =>
      seq(
        "[",
        optional(choice($.list_comprehension_body, $.list_cons_body, commaSep1($.expression))),
        "]"
      ),

    list_comprehension_body: ($) =>
      seq(
        field("yield", $.expression),
        "|",
        $.comprehension_generator,
        repeat(seq(",", $.comprehension_clause))
      ),

    list_cons_body: ($) =>
      seq(field("head", $.expression), "|", field("tail", $.expression)),

    comprehension_clause: ($) =>
      choice($.comprehension_generator, $.comprehension_filter),

    comprehension_generator: ($) =>
      seq(field("pattern", $.pattern), "<-", field("source", $.expression)),

    comprehension_filter: ($) => field("filter", $.expression),

    call_expression: ($) => seq($._name_ref, $.arguments),

    method_call_expression: ($) =>
      prec.left(5, seq($.expression, $._field_selector, $.arguments)),

    field_expression: ($) => prec.left(4, seq($.expression, $._field_selector)),

    binary_expression: ($) =>
      prec.left(
        1,
        seq(
          $.expression,
          choice(
            "+",
            "-",
            "*",
            "/",
            "div",
            "rem",
            "==",
            "!=",
            ">=",
            "<=",
            ">",
            "<",
            "in",
            "..",
            "and",
            "or",
            "|>"
          ),
          $.expression
        )
      ),

    arguments: ($) => seq("(", optional(commaSep1($.argument)), ")"),

    argument: ($) => choice($.expression, seq($.identifier, "=", $.expression)),

    pattern: ($) =>
      choice(
        $.string_pattern,
        $.tuple_pattern,
        $.list_pattern,
        $.map_pattern,
        $.record_pattern,
        $.binary_layout_pattern,
        $.constructor_pattern,
        $.identifier,
        $.type_identifier,
        $.private_field_identifier,
        $.atom_literal,
        "_",
        $.number,
        $.string
      ),

    parameter_pattern: ($) =>
      choice(
        $.string_pattern,
        $.tuple_pattern,
        $.list_pattern,
        $.map_pattern,
        $.record_pattern,
        $.binary_layout_pattern,
        $.constructor_pattern,
        $.private_field_identifier,
        $.atom_literal,
        "_",
        $.number,
        $.string
      ),

    tuple_pattern: ($) => seq("{", commaSep1($.pattern), "}"),

    binary_layout_pattern: ($) =>
      seq(
        "Binary",
        "[",
        field("endian", $.binary_layout_endian),
        "]",
        "{",
        commaSep1($.binary_layout_field),
        "}"
      ),

    binary_layout_endian: () => choice("big", "little"),

    binary_layout_descriptor: ($) =>
      choice(
        seq(
          field("kind", $.binary_layout_descriptor_kind),
          "[",
          field("width", $.binary_layout_width),
          "]"
        ),
        choice("Utf8", "Rest")
      ),

    binary_layout_descriptor_kind: () => choice("UInt", "IntBits", "Bytes", "Bits"),

    binary_layout_width: () => /[0-9]+/,

    constructor_pattern: ($) => seq($.type_identifier, "(", optional(commaSep1($.pattern)), ")"),

    string_pattern: () =>
      token(prec(1, /"([^"\\]|\\.)*\$\{[a-z_][A-Za-z0-9_]*(\s*:\s*[^}"\\]+)?\}([^"\\]|\\.)*"/)),

    qualified_identifier: () =>
      token(
        choice(
          /([a-z_][A-Za-z0-9_]*\.)+[A-Z][A-Za-z0-9_]*(\.[A-Za-z_][A-Za-z0-9_]*)*/,
          /[A-Z][A-Za-z0-9_]*(\.[A-Za-z_][A-Za-z0-9_]*)+/
        )
      ),

    _name_ref: ($) => choice($.qualified_identifier, $.identifier, $.type_identifier),

    _type_name_ref: ($) => choice($.qualified_identifier, $.type_identifier),

    _field_selector: ($) => choice($.field_identifier, $.private_field_selector),

    field_identifier: () => token.immediate(/\.[a-z_][A-Za-z0-9_]*/),

    pub_keyword: () => token(prec(1, "pub")),

    identifier: () => token(prec(-1, /[a-z_][A-Za-z0-9_]*/)),

    type_identifier: () => /[A-Z][A-Za-z0-9_]*/,

    number: () => /[0-9]+(\.[0-9]+)?([eE][+-]?[0-9]+)?/,

    string: () => token(prec(-1, /"([^"\\]|\\.)*"/)),
